# Audio-To-Vibrations

./: Cargo.toml  README.md  build.rs
src/: addedControlPanelV1.rs  addedLowPassToggleV2.rs  addedMultiDeviceAndBugfixV7.rs  addedMultiDeviceV6.rs  addedQuickChangeButtonsV5.rs  addedResetButtonsAndSmoothingV3.rs  main.rs
