[package]
name = "subwoofer"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0"
audio-visualizer = "0.4"
buttplug = "9.0"
clap = { version = "4.5", features = ["derive"] }
cpal = "0.15"
# Add eframe for the new control panel GUI
eframe = "0.28.0"
lowpass-filter = "0.3"
spectrum-analyzer = "1.5"
tokio = { version = "1.39", features = ["full"] }