[package]
name = "AudioToVibrations"
version = "1.0.4"
edition = "2021"

[profile.release]
opt-level = 0          # Use a slightly less aggressive optimization level (default is 3)
lto = true            # Link-Time Optimization
codegen-units = 1      # Can sometimes help with stability at the cost of compile time
panic = "unwind"       # Ensure panics are caught and can be reported (this is default but good to be explicit)

[dependencies]
anyhow = "1.0"
audio-visualizer = "0.4"
buttplug = "9.0"
clap = { version = "4.5", features = ["derive"] }
cpal = "0.15"
# Add eframe for the new control panel GUI
eframe = "0.28.0"
lowpass-filter = "0.3"
spectrum-analyzer = "1.5"
tokio = { version = "1.39", features = ["full"] }
